241022_Docker2Kubernetes/5_k8s_example_apps/psuniversal/psuniveral.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: psuniversal

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: psuniversal
  namespace: psuniversal
  labels:
    app: psuniversal
spec:
  replicas: 1
  selector:
   matchLabels:
    app: psuniversal
  template:
   metadata:
    labels:
     app: psuniversal
   spec:
    containers:
     - name: psuniversal
       image: ironmansoftware/universal
       ports:
       - containerPort: 5000
       volumeMounts:
       - name: psuniversal-storage
         mountPath: /home/data
    volumes:
    - name: psuniversal-storage
      persistentVolumeClaim:
        claimName: psuniversal-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: psuniversal-svc
  namespace: psuniversal
spec:
  selector:
    app: psuniversal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-login
  namespace: psuniversal
spec:
  redirectRegex:
    regex: ^https://psuniversal.x.x.x.x.sslip.io/$
    replacement: https://psuniversal.x.x.x.x.sslip.io/login?returnUrl=/admin

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: psuniversal-ingress
  namespace: psuniversal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: psuniversal-redirect-login@kubernetescrd
spec:
  rules:
  - host: psuniversal.x.x.x.x.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: psuniversal-svc
         port:
          number: 80
  tls: []
  # - hosts:
  #   - psuniversal.local.example.com
  #   secretName: psuniversal-cert
